# hyperboria

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
idm/api/: BUILD.bazel  main.py
idm/api/aioclient/: BUILD.bazel  __init__.py  aioclient.py
idm/api/configs/: __init__.py  base.yaml  logging.yaml
idm/api/daemons/: admin_log_reader.py
idm/api/proto/: BUILD.bazel  chat_manager_service.proto  chat_manager_service_pb2.py  chat_manager_service_pb2_grpc.py  profile_service.proto  subscription_manager_service.proto
idm/api/services/: chat_manager.py  profile.py  subscription_manager.py
images/production/: BUILD.bazel
nexus/actions/: BUILD.bazel  README.md  __init__.py  base.py  common.py  crossref_api.py  exceptions.py  golden_postgres.py  libgen_api.py  postgres.py  scimag.py  scimag_pb.py  scitech.py  scitech_pb.py  update_document.py  update_document_scimag.py  update_document_scitech.py  update_document_sharience.py  vote.py
nexus/actions/document_operations_pb/: store_telegram_file_id_pb.py  update_document_scimag_pb.py  update_document_scitech_pb.py  update_document_sharience_pb.py  vote_pb.py
nexus/bot/: BUILD.bazel  README.md  __init__.py  application.py  exceptions.py  main.py  promotioner.py
nexus/bot/configs/: __init__.py  base.yaml  logging.yaml  promotions.yaml
nexus/bot/handlers/: __init__.py  aboutus.py  admin.py  ban.py  base.py  close.py  contact.py  copyright.py  donate.py  download.py  emoji.py  help.py  howtohelp.py  legacy.py  noop.py  profile.py  rank.py  referencing_to.py  roll.py  search.py  seed.py  settings.py  shortlink.py  start.py  stop.py  submit.py  top_missed.py  trends.py  view.py  vote.py
nexus/bot/user_manager/: user_manager.py
nexus/bot/widgets/: admin_widget.py  banlist_widget.py  document_list_widget.py  profile_widget.py  search_widget.py  settings_widget.py
nexus/cognitron/installer/: BUILD.bazel  main.py
nexus/cognitron/schema/: BUILD.bazel  scimag.py  scimag.yaml  scitech.py  scitech.yaml
nexus/cognitron/web/: BUILD.bazel  README.md  app.vue  nuxt.config.js  nuxt.config.ts
nexus/hub/: BUILD.bazel  README.md  exceptions.py  fancy_names.py  main.py
nexus/hub/aioclient/: BUILD.bazel  __init__.py  aioclient.py
nexus/hub/configs/: __init__.py  base.yaml  logging.yaml  pylon.yaml
nexus/hub/proto/: BUILD.bazel  delivery_service.proto  delivery_service_pb2.py  delivery_service_pb2_grpc.py  submitter_service.proto  submitter_service_pb2.py  submitter_service_pb2_grpc.py
nexus/hub/services/: base.py  delivery.py  mutual_aid_service.py  submitter.py
nexus/hub/user_manager/: user_manager.py
nexus/ingest/: BUILD.bazel  README.md  __init__.py  main.py
nexus/ingest/jobs/: __init__.py  base.py  crossref_api.py  libgen_api.py  postgres.py  self_feed.py
nexus/ingest/sinks/: __init__.py  base.py  kafka.py
nexus/meta_api/: BUILD.bazel  README.md  cli.py  main.py  word_transformers.py
nexus/meta_api/aioclient/: BUILD.bazel  __init__.py  aioclient.py
nexus/meta_api/configs/: __init__.py  base.yaml  logging.yaml
nexus/meta_api/mergers/: __init__.py  aggregation.py  count.py  reservoir_sampling.py  top_docs.py
nexus/meta_api/models/: classic.txt
nexus/meta_api/proto/: BUILD.bazel  documents_service.proto  documents_service_grpc_web_pb.js  documents_service_pb.js  documents_service_pb2.py  documents_service_pb2_grpc.py  meta_search_service.proto  meta_search_service_pb2.py  meta_search_service_pb2_grpc.py  search_service.proto  search_service_grpc_web_pb.js  search_service_pb.js  search_service_pb2.py  search_service_pb2_grpc.py
nexus/meta_api/providers/: data.py  stat.py
nexus/meta_api/query_extensionner/: BUILD.bazel  __init__.py  checks.py
nexus/meta_api/query_extensions/: BUILD.bazel  __init__.py
nexus/meta_api/rescorers/: __init__.py  base.py  classic_rescorer.py
nexus/meta_api/services/: base.py  documents.py  search.py
nexus/models/proto/: BUILD.bazel  operation.proto  operation_pb.js  operation_pb2.py  scimag.proto  scimag_pb.js  scimag_pb2.py  scitech.proto  scitech_pb.js  scitech_pb2.py  sharience.proto  sharience_pb.js  sharience_pb2.py  typed_document.proto  typed_document_pb.js  typed_document_pb2.py
nexus/nlptools/: BUILD.bazel  language_detect.py  languages.py  morph.py  regex.py  utils.py
nexus/nlptools/tests/: BUILD.bazel  test_utils.py
nexus/pipe/: BUILD.bazel  README.md  __init__.py  main.py
nexus/pipe/configs/: base.yaml  logging.yaml
nexus/pipe/consumers/: __init__.py  base.py  cross_references_consumer.py  document_operations_consumer.py
nexus/pipe/filters/: __init__.py
nexus/pipe/processors/: __init__.py  base.py  cross_references_processor.py  telegram_messages_processor.py
nexus/promotions/: BUILD.bazel  __init__.py  promotions.yaml
nexus/pylon/: BUILD.bazel  README.md  __init__.py  cli.py  client.py  consts.py  exceptions.py  matcher.py  network_agent.py  prepared_request.py  proxy_manager.py  source.py
nexus/pylon/configs/: __init__.py  pylon.yaml
nexus/pylon/drivers/: __init__.py  base.py  browser.py  direct.py
nexus/pylon/pdftools/: __init__.py  text_collector.py  watermarks.py
nexus/pylon/proto/: BUILD.bazel  file.proto  file_pb2.py
nexus/pylon/resolvers/: __init__.py  base.py  doi_org_request.py  request.py  template.py
nexus/pylon/sources/: __init__.py  base.py  libgen_doi.py  libgen_md5.py  libgen_new.py  scihub.py
nexus/pylon/validators/: __init__.py  base.py  md5.py  pdf.py
nexus/translations/: BUILD.bazel  __init__.py  translations.yaml
rules/nodejs/: BUILD.bazel  common.bzl  nuxt.bzl  nuxt.server.js  package.json  webpack.bzl  webpack.dynamic.server.js  webpack.server.js
rules/packaging/: BUILD.bazel  make_deb.py  packaging.bzl
rules/packaging/templates/: BUILD.bazel  postinst.jinja2  postrm.jinja2  preinst.jinja2  prerm.jinja2
rules/python/: BUILD.bazel  requirements-lock.txt  requirements.txt
rules/rust/: BUILD.bazel  Cargo.toml  README.md  crates.bzl
rules/rust/cargo/: BUILD.bazel
rules/rust/remote/: BUILD.actix-0.10.0.bazel  BUILD.actix-codec-0.2.0.bazel  BUILD.actix-codec-0.3.0.bazel  BUILD.actix-cors-0.5.4.bazel  (+889 more)
(+132 files in other folders)
