load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

# System-wide settings
config_setting(
    name = "osx",
    constraint_values = ["@bazel_tools//platforms:osx"],
)

config_setting(
    name = "linux",
    constraint_values = ["@bazel_tools//platforms:linux"],
)

platform(
    name = "linux_x86",
    constraint_values = [
        "@rules_rust//rust/platform:linux",
        "@bazel_tools//platforms:linux",
        "@bazel_tools//platforms:x86_64",
    ],
)

