load("@pip_modules//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "actions",
    srcs = glob(
        ["**/*.py"],
        exclude = ["tests/**"],
    ),
    imports = ["."],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("beautifulsoup4"),
        requirement("lxml"),
        requirement("pypika"),
        requirement("numpy"),
        requirement("aiocrossref"),
        requirement("aiolibgen"),
        "//library/aiopostgres",
        requirement("izihawa_types"),
        "//nexus/models/proto:proto_py",
        requirement("izihawa_nlptools"),
    ],
)
