load("@pip_modules//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "nlptools",
    srcs = glob(
        ["**/*.py"],
        exclude = ["tests/**"],
    ),
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("emoji"),
        requirement("lemminflect"),
        requirement("pycld3"),
        requirement("spacy"),
    ],
)
