load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")

load("@pip_modules//:requirements.bzl", "requirement")

alias(
    name = "binary",
    actual = ":image.binary",
)

py3_image(
    name = "image",
    srcs = glob(["**/*.py"]),
    base = "//images/production:base-python-image",
    data = [
        "configs/base.yaml",
        "configs/logging.yaml",
    ],
    main = "main.py",
    srcs_version = "PY3ONLY",
    visibility = ["//visibility:public"],
    deps = [
        requirement("aiokafka"),
        requirement("aiosumma"),
        requirement("orjson"),
        requirement("pypika"),
        requirement("aiocrossref"),
        requirement("aiokit"),
        "//library/aiopostgres",
        requirement("izihawa_configurator"),
        "//library/logging",
        "//nexus/actions",
        "//nexus/models/proto:proto_py",
        requirement("izihawa_utils"),
    ],
)

