load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "promotions",
    srcs = glob(
        ["**/*.py"],
        exclude = ["tests/**"],
    ),
    data = ["promotions.yaml"],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("izihawa_configurator"),
    ],
)
