load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@pip_modules//:requirements.bzl", "requirement")

py_library(
    name = "pylon",
    srcs = glob(["**/*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        requirement("aiodns"),
        requirement("aiohttp"),
        requirement("aiohttp_socks"),
        requirement("brotli"),
        requirement("cchardet"),
        requirement("orjson"),
        requirement("pdfminer.six"),
        requirement("python-socks"),
        requirement("tenacity"),
        requirement("aiokit"),
        "//library/logging",
        "//nexus/pylon/proto:pylon_proto_py",
    ],
)

py_binary(
    name = "cli",
    srcs = ["cli.py"],
    main = "cli.py",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("fire"),
        ":pylon",
    ],
)
