load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@pip_modules//:requirements.bzl", "requirement")

py_library(
    name = "pylon",
    srcs = glob(["**/*.py"]),
    data = [
        "configs/pylon.yaml",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("aiodns"),
        requirement("aiofiles"),
        requirement("aiohttp"),
        requirement("aiohttp_socks"),
        requirement("brotli"),
        requirement("cchardet"),
        requirement("certifi"),
        requirement("jq"),
        requirement("orjson"),
        requirement("pypdf2"),
        requirement("python-socks"),
        requirement("selenium"),
        requirement("tenacity"),
        requirement("aiokit"),
        "//library/configurator",
        "//library/logging",
        "//nexus/pylon/proto:pylon_proto_py",
    ],
)

py_binary(
    name = "cli",
    srcs = ["cli.py"],
    main = "cli.py",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("fire"),
        ":pylon",
    ],
)
