load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python:packaging.bzl", "py_wheel")
load("@pip_modules//:requirements.bzl", "requirement")

filegroup(
    name = "data",
    srcs = ["configs/pylon.yaml"],
)

py_library(
    name = "pylon",
    srcs = glob(["**/*.py"]),
    data = [":data"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("aiodns"),
        requirement("aiofiles"),
        requirement("aiohttp"),
        requirement("aiohttp_socks"),
        requirement("brotli"),
        requirement("cchardet"),
        requirement("certifi"),
        requirement("fire"),
        requirement("jq"),
        requirement("orjson"),
        requirement("pypdf2"),
        requirement("python-socks"),
        requirement("selenium"),
        requirement("tenacity"),
        requirement("aiokit"),
        requirement("izihawa_configurator"),
        "//library/logging",
        "//nexus/pylon/proto:pylon_proto_py",
    ],
)

py_wheel(
    name = "nexus-pylon-wheel",
    author = "The Superpirate",
    author_email = "fist.of.the.first.pirates@gmail.com",
    classifiers = [
        "Programming Language :: Python :: 3.10",
    ],
    description_file = ":README.md",
    distribution = "nexus-pylon-wheel",
    entry_points = {"console_scripts": ["pylon = nexus.pylon.cli:main"]},
    homepage = "https://github.com/nexus-stc/hyperboria/tree/master/nexus/pylon",
    license = "MIT License",
    python_requires = ">=3.10",
    python_tag = "py3",
    requires = [
        "aiokit >= 1.0.0",
        "izihawa_configurator >= 1.0.0",
        "selenium >= 4.3.0",
    ],
    strip_path_prefixes = [
        "nexus/pylon/proto/pylon_proto_py_pb",
    ],
    version = "1.0.0",
    deps = [
        ":data",
        ":pylon",
        "//nexus/pylon/proto:pylon_proto_py",
    ],
)
