load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "translations",
    srcs = glob(
        ["**/*.py"],
        exclude = ["tests/**"],
    ),
    data = ["translations.yaml"],
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        requirement("izihawa_configurator"),
    ],
)
